// Copyright (c) Quinntyne Brown. All Rights Reserved.
// Licensed under the MIT License. See License.txt in the project root for license information.

namespace CodeGenerator.Core.Artifacts;

public record GeneratedFileEntry(string Path, string Content, long SizeBytes);
